# leetcode

./: .editorconfig  .gitignore  Justfile  Makefile  README.md  binnarySearch.cpp  flake.nix  format.sh  go.mod  jest.config.ts  linearSearch.cpp  package-lock.json  package.json  rome.json  rustfmt.toml  shell.nix  tsconfig.json
.github/: dependabot.yml
.github/workflows/: c_sharp.yml  cpp.yml  csharp.yml  dart.yml  go.yml  golang_ci.yml  java.yml  javascript.yml  ruby.yml  rust.yml  static.yml  test.yml  ts.yml  typescript.yml
Bash/tenth_line/: 195.sh
C++/: .clang-format  .gitignore  CMakeLists.txt  Justfile  Makefile  README.md
C++/include/: solution_tmpl.h
C++/lib/: linked_list.hpp
C++/src/: 1.cpp  14.cpp  20.cpp  27.cpp  49.cpp  7.cpp  9.cpp  add_binary.cpp  add_binary.hpp  add_digits.cpp  add_digits.hpp  add_two_integers.cpp  add_two_integers.hpp  add_two_numbers.hpp  binary_search.cpp  binary_search.hpp  group_anagrams.cpp  group_anagrams.hpp  largest_number_at_least_twice_of_others.cpp  largest_number_at_least_twice_of_others.hpp  longest_common_prefix.cpp  longest_common_prefix.hpp  palindrome_number.cpp  palindrome_number.hpp  power_of_two.cpp  power_of_two.hpp  remove_duplicates_from_sorted_list.hpp  remove_element.cpp  remove_element.hpp  reverse_integer.cpp  reverse_integer.hpp  single_number.cpp  single_number.hpp  sort_an_array.cpp  sort_an_array.hpp  spiral_matrix_2.cpp  spiral_matrix_2.hpp  stone_removal_game.cpp  stone_removal_game.hpp  string_to_integer.cpp  (+5 more)
C++/tests/: 14_test.cpp  1_test.cpp  20_test.cpp  27_test.cpp  49_test.cpp  7_test.cpp  9_test.cpp  CMakeLists.txt  add_binary_test.cpp  add_digits_test.cpp  add_two_integers_test.cpp  add_two_numbers_test.cpp  binary_search_test.cpp  group_anagrams_test.cpp  largest_number_at_least_twice_of_others_test.cpp  longest_common_prefix_test.cpp  palindrome_number_test.cpp  power_of_two_test.cpp  remove_duplicates_from_sorted_list_test.cpp  remove_element_test.cpp  reverse_integer_test.cpp  single_number_test.cpp  sort_an_array_test.cpp  spiral_matrix_2_test.cpp  stone_removal_game_test.cpp  string_to_integer_test.cpp  two_sum_test.cpp  valid_parentheses_test.cpp
CSharp/: .clang-format  .editorconfig  .gitignore  CSharp.csproj  CSharp.sln
CSharp/AddTwoNumbers/: Solutions.cs  Test.cs
CSharp/LongestCommonPrefix/: Solutions.cs  Tests.cs
CSharp/PalindromeNumber/: Solutions.cs  Tests.cs
CSharp/ReverseInteger/: Solutions.cs  Tests.cs
CSharp/RomanToInteger/: Solutions.cs  Tests.cs
CSharp/Solutions/: AddTwoNumbers.cs  LongestCommonPrefix.cs  MissingNumber.cs  PalindromeNumber.cs  ReverseInteger.cs  RomanToInteger.cs  SingleNumber.cs  SummaryRanges.cs  TwoSum.cs  ValidParentheses.cs
CSharp/Src/: two_sum.cs
CSharp/Tests/: AddTwoNumbers.cs  LongestCommonPrefix.cs  MissingNumber.cs  PalindromeNumber.cs  ReverseInteger.cs  RomanToInteger.cs  SingleNumber.cs  SummaryRanges.cs  Tests.csproj  TwoSum.cs  ValidParentheses.cs
CSharp/TwoSum/: Solutions.cs  Test.cs  Tests.cs
CSharp/add_two_numbers/: Solution.cs  Tests.cs
CSharp/best_time_to_buy_and_sell_stock/: Solution.cs  Tests.cs
CSharp/binary_search/: Solution.cs  Tests.cs
CSharp/climbing_stairs/: Solution.cs  Tests.cs
CSharp/count_odd_num/: Solution.cs  Tests.cs
CSharp/find_index_of_the_first_occur_string/: Solution.cs  Tests.cs
CSharp/len_of_last_word/: Solution.cs  Tests.cs
CSharp/longest_common_prefix/: Solution.cs  Tests.cs
CSharp/merge_two_sorted_lists/: Solution.cs  Tests.cs
CSharp/missing_number/: Solution.cs  Tests.cs
Codeforces/: 4A_Watermelon.rs
Codelearn/: GCPD.cpp  README.md  factorSum.cpp  isPrime.cpp  lastDigitDiffZero.cpp
Codelearn.rs/: factorSum.rs  isPrime.rs
Dart/: pubspec.yaml
Go/: 1.go  13.go  13_test.go  14.go  14_test.go  1_test.go  20.go  704.go  9.go  9_test.go  go.mod  go_test.go
Golang/: go.mod  helpers.go
Java/: .editorconfig  .gitignore  .project  1.java  14.java  9.java  build.gradle  pom.xml  settings.gradle  settings.gradle.kts
JavaScript/: deno.json  eslint.config.js  package-lock.json  package.json
LeetCode/: 1.cpp  20.js  704.cpp  README.md
Ruby/: .rubocop.yml
Rust/: Cargo.toml
SQL/: 182.sql
Search/: binnarySearch.cpp
Sort/: bublesort.cpp  insertionsort.cpp  mergesort.cpp  selectionsort.cpp
TS/: jest.config.ts  package-lock.json
TypeScript/: .prettierrc  1.ts  121.ts  20.ts  27.ts  50.ts  9.ts  929.ts  bun.lockb  deno.json  deps.ts  jest.config.ts  lib.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
book/: book.toml  docusaurus.config.js  package-lock.json  package.json
src/: 1.ts  add_two_numbers.rs  best_time2buy_n_sell_stock.rs  binary_search.rs  climbing_stairs.rs  count_odd_number.rs  find_index_of_the1st_occur_in_a_string.rs  len_of_last_word.rs  lib.rs  longest_common_prefix.rs  maximum_subarray.rs  missing_number.rs  num_of_good_pairs.rs  palindrome_num.rs  parking_system.rs  plus_one.rs  remove_duplicates_from_sorted_arr.rs  remove_element.rs  reverse_integer.rs  roman2int.rs  same_tree.rs  search_insert_position.rs  two_sum.rs  unique_email_addresses.rs  valid_parentheses.rs  water_bottles.rs
test/: 9.test.ts
(+445 files in other folders)
